force-app/main/default/objects/Certification_Question__c/fields/Difficulty__c.field-meta.xml
<CustomField>
    <fullName>Difficulty__c</fullName>
    <label>Difficulty</label>
    <length>255</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Easy</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Hard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <visibilityPublic</visibilityPublic>
</CustomField>