force-app/main/default/objects/Certification_Question__c/fields/Option_C__c.field-meta.xml
<CustomField>
    <fullName>Option_C__c</fullName>
    <label>Option C</label>
    <length>1000</length>
    <required>true</required>
    <type>Text</type>
    <visibilityPublic</visibilityPublic>
</CustomField>