force-app/main/default/objects/Certification_Question__c/fields/Option_D__c.field-meta.xml
<CustomField>
    <fullName>Option_D__c</fullName>
    <label>Option D</label>
    <length>1000</length>
    <required>true</required>
    <type>Text</type>
    <visibilityPublic</visibilityPublic>
</CustomField>