force-app/main/default/objects/Certification_Question__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <label>Question Text</label>
    <length>5000</length>
    <required>true</required>
    <type>LongTextArea</type>
    <visibilityPublic</visibilityPublic>
</CustomField>