force-app/main/default/objects/Certification_Question__c/fields/Topic__c.field-meta.xml
<CustomField>
    <fullName>Topic__c</fullName>
    <label>Topic</label>
    <length>255</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lead Management</fullName>
            </value>
            <value>
                <fullName>Account & Contact Management</fullName>
            </value>
            <value>
                <fullName>Opportunity Management</fullName>
            </value>
            <value>
                <fullName>Sales Analytics</fullName>
            </value>
            <value>
                <fullName>Process Automation</fullName>
            </value>
            <value>
                <fullName>Sales Collaboration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <visibilityPublic</visibilityPublic>
</CustomField>